# roma-simulator

./: .gitignore  README.md  pyproject.toml
src/roma_sim/: __init__.py  cli.py
src/roma_sim/analysis/: __init__.py  kpis.py
src/roma_sim/dispatchers/: __init__.py  base.py  critical_path.py  greedy.py
src/roma_sim/domain/: __init__.py  events.py  fleet.py  site.py  tasks.py  world.py
src/roma_sim/engine/: __init__.py  runner.py  stochastics.py
src/roma_sim/runs/: __init__.py  compare.py  replay.py  store.py  sweep.py
src/roma_sim/scenarios/: __init__.py  warehouse_shell.py
src/roma_sim/viewer/: __init__.py  builder.py  template.html
tests/: test_domain.py  test_kpis.py  test_replay.py  test_store.py  test_sweep.py
tests/dispatchers/: test_critical_path.py  test_greedy.py
tests/property/: test_invariants.py
tests/scenarios/: test_warehouse_shell.py
